# orders_chatbot

./: .gitignore  app.py  main.py  populate_RAG.py  populate_db.py  pyproject.toml  readme.md  requirements.txt
data/: products.txt
