[project]
name = "orders-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "pandas-stubs==2.3.2.250827",
    "pypdf>=6.0.0",
    "transformers>=4.56.1",
]
